# dynamic-cli

./: .gitignore  .replit  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  Window_setup.txt  main.py  pyproject.toml  requirements.txt  setup.py  window_setup.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: documentation.md  feature.md  proposal.md
.github/workflows/: codacy-analysis.yaml  codeql-analysis.yml  greetings.yml
dynamic/: __main__.py  api_test.py  autocomplete.py  completer.py  completions.py  completions_git.py  formatter.py  namespace.py  new.py  notion.py  save.py  search.py  update.py  utility.py  utils.py  validation.py
dynamic/lib/: pretty_date_time.py
dynamic/tests/: test_get_api.py
script/: dynamic_complete.sh  xonsh  xonsh.bat
scripts/: xonsh
src/: __init__.py
src/arguments/: __init__.py  api_test.py  error.py  issues.py  markdown.py  notion.py  reddit.py  save.py  search.py  settings.py  update.py  utility.py
xonsh/: __init__.py  aliases.py  ansi_colors.py  ast.py  base_shell.py  built_ins.py  codecache.py  color_tools.py  commands_cache.py  completer.py  contexts.py  diff_history.py  dirstack.py  dumb_shell.py  environ.py  events.py  execer.py  foreign_shells.py  fs.py  imphooks.py  inspectors.py  jobs.py  jsonutils.py  jupyter_kernel.py  jupyter_shell.py  lazyasd.py  lazyimps.py  lazyjson.py  lexer.py  macutils.py  main.py  openpy.py  parser.py  pretty.py  proc.py  pyghooks.py  pygments_cache.py  pytest_plugin.py  readline_shell.py  replay.py  (+11 more)
xonsh/completers/: _aliases.py  base.py  bash.py  dirs.py  (+10 more)
(+47 files in other folders)
